--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Monsor3sDev</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+</head>
+<body>
+    <header>
+        <!-- <img src="./assets/img/logo.png" alt="logo"> -->
+        <h2>Monsor3sDev</h2>
+        <nav> 
+            <a href="">Skills</a>
+            <a href="">Projetos</a>
+            <a href="">Sobre</a>
+            <a href="">Contatos</a>
+            <a id="button" href="" lang="en">Download CV</a>
+        </nav>
+    </header>
+</body>
+</html>
