Criado section button

--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
+    <section>
+        <h1>Marlon Monsores</h1>
+        <h2>FrontEnd Developer</h2>
+    </section>
+    <a class="btnSection" href="">Download CV</a>
+    <a class="btnSection" href="">Contatos</a>
 </body>
 </html>
