Create the title component

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./components/title.css">
 </head>
 <body>
     <header>
@@ -23,6 +24,7 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
+    <img class="imgSection" src="./assets/img/photo.png" alt="photo section">
     <section>
         <h1>Marlon Monsores</h1>
         <h2>FrontEnd Developer</h2>
