create the subtitle component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/title.css">
+    <link rel="stylesheet" href="./components/subtitle.css">
 </head>
 <body>
     <header>
