create box components

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
+    <link rel="stylesheet" href="./components/box.css">
 </head>
 <body>
     <header>
@@ -25,11 +26,11 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <img class="imgSection" src="./assets/img/photo.png" alt="photo section">
-    <section>
+    <!-- <img class="imgSection" src="./assets/img/photo.png" alt="photo section"> -->
+    <div id="box">
         <h1>Marlon Monsores</h1>
         <h2>FrontEnd Developer</h2>
-    </section>
+    </div>
     <a class="btnSection" href="">Download CV</a>
     <a class="btnSection" href="">Contatos</a>
 </body>
