create the compoments

--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
     <link rel="stylesheet" href="./components/box.css">
+    <link rel="stylesheet" href="./components/button.css">
+    <link rel="stylesheet" href="./components/action.css">
+    <link rel="stylesheet" href="./components/header.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <!-- <img src="./assets/img/logo.png" alt="logo"> -->
-        <h2>Monsor3sDev</h2>
+        <h2 class="subtitle">Monsor3sDev</h2>
         <nav> 
-            <a href="">Skills</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contatos</a>
-            <a id="button" href="" lang="en">Download CV</a>
+            <a class="action"href="">Skills</a>
+            <a class="action"href="">Projetos</a>
+            <a class="action"href="">Sobre</a>
+            <a class="action"href="">Contatos</a>
+            <a class="button" href="" lang="en">Download CV</a>
         </nav>
-    </header>
+    </header class="header">
     <!-- <img class="imgSection" src="./assets/img/photo.png" alt="photo section"> -->
-    <div id="box">
-        <h1>Marlon Monsores</h1>
-        <h2>FrontEnd Developer</h2>
+    <div class="box">
+        <h1 class="title">Marlon Monsores</h1>
+        <h2 class="subtitle">FrontEnd Developer</h2>
     </div>
-    <a class="btnSection" href="">Download CV</a>
-    <a class="btnSection" href="">Contatos</a>
+    <a class="button" href="" lang="en">Download CV</a>
+    <a class="button" href="">Contatos</a>
 </body>
 </html>
