--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">  
+
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./components/header.css">
+    <link rel="stylesheet" href="./components/banner.css">
+    <link rel="stylesheet" href="./components/button.css">
     <link rel="stylesheet" href="./components/title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
     <link rel="stylesheet" href="./components/box.css">
-    <link rel="stylesheet" href="./components/button.css">
     <link rel="stylesheet" href="./components/action.css">
-    <link rel="stylesheet" href="./components/header.css">
 </head>
 <body>
     <header class="header">
@@ -27,13 +29,19 @@
             <a class="action"href="">Contatos</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
-    </header class="header">
+    </header>
     <!-- <img class="imgSection" src="./assets/img/photo.png" alt="photo section"> -->
-    <div class="box">
-        <h1 class="title">Marlon Monsores</h1>
-        <h2 class="subtitle">FrontEnd Developer</h2>
-    </div>
-    <a class="button" href="" lang="en">Download CV</a>
-    <a class="button" href="">Contatos</a>
+    <section class="banner">
+        <div class="wrapper">
+            <div class="box">
+                <h1 class="title">Marlon Monsores</h1>
+                <h2 class="subtitle">FrontEnd Developer</h2>
+            </div>
+            <div class="navigation">
+                <a class="button" href="" lang="en">Download CV</a>
+                <a class="button" href="">Contatos</a>
+            </div>
+        </div>
+    </section>  
 </body>
 </html>
