create the skill components

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./components/subtitle.css">
     <link rel="stylesheet" href="./components/box.css">
     <link rel="stylesheet" href="./components/action.css">
+    <link rel="stylesheet" href="./components/skills.css">
 </head>
 <body>
     <header class="header">
@@ -43,5 +44,8 @@
             </div>
         </div>
     </section>  
+    <section class="skills">
+        <h1 class="title">Skills</h1>
+    </section>
 </body>
 </html>
