create the section skill

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     </section>  
     <section class="skills">
         <h1 class="title">Skills</h1>
+        <div class="listSkills">
+            <div class="skill">
+            <img src="./assets/img/ico_html5.png" alt="icon html" class="iconSkills">
+            <h2 class="subtitle">HTML</h2>
+            <div class="process"></div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
