centralized container list skills

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 </head>
 <body>
     <header class="header">
-        <!-- <img src="./assets/img/logo.png" alt="logo"> -->
         <h2 class="subtitle">Monsor3sDev</h2>
         <nav> 
             <a class="action"href="">Skills</a>
@@ -31,7 +30,6 @@
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <!-- <img class="imgSection" src="./assets/img/photo.png" alt="photo section"> -->
     <section class="banner">
         <div class="wrapper">
             <div class="box">
@@ -46,13 +44,13 @@
     </section>  
     <section class="skills">
         <h1 class="title">Skills</h1>
-        <div class="listSkills">
-            <div class="skill">
-            <img src="./assets/img/ico_html5.png" alt="icon html" class="iconSkills">
-            <h2 class="subtitle">HTML</h2>
-            <div class="process"></div>
-            </div>
-        </div>
+        <ul class="listSkills">
+            <li class="skillHtml">
+                <img src="./assets/img/ico_html5.png" alt="icon html" class="iconSkills">
+                <h2 class="subtitle">HTML</h2>
+                <div class="process"></div>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
