create the -second variation to title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </section>  
     <section class="skills">
-        <h1 class="title">Skills</h1>
+        <h1 class="title -second">Skills</h1>
         <ul class="listSkills">
             <li class="skillHtml">
                 <img src="./assets/img/ico_html5.png" alt="icon html" class="iconSkills">
