modified name class section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./components/subtitle.css">
     <link rel="stylesheet" href="./components/box.css">
     <link rel="stylesheet" href="./components/action.css">
-    <link rel="stylesheet" href="./components/skills.css">
+    <link rel="stylesheet" href="./components/section.css">
 </head>
 <body>
     <header class="header">
@@ -42,7 +42,7 @@
             </div>
         </div>
     </section>  
-    <section class="skills">
+    <section class="section">
         <h1 class="title -second">Skills</h1>
         <ul class="listSkills">
             <li class="skillHtml">
