--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </section>  
     <section class="section">
         <h2 class="main-title -second">Skills</h2>
-        
-        <article class="skill-tec"> <!--description list -->
+
+        <article class="skill-tec">
             <img class="icon" src="./img/ico_html5.png" alt="logo HTML">
             <div class="right">
                 <h3 class="title">HTML</h3>
@@ -56,14 +56,70 @@
                     </progress>
             </div>
         </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_nodejs.png" alt="logo NodeJs">
+            <div class="right">
+                <h3 class="title">NodeJS</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_css3.png" alt="logo CSS">
+            <div class="right">
+                <h3 class="title">CSS</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_tdd.png" alt="logo TDD">
+            <div class="right">
+                <h3 class="title">TDD</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_js.png" alt="logo JavaScript">
+            <div class="right">
+                <h3 class="title">JavaScript</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_restapi.png" alt="logo Rest Api">
+            <div class="right">
+                <h3 class="title">Rest Api</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_react.png" alt="logo React">
+            <div class="right">
+                <h3 class="title">React</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
+        <article class="skill-tec">
+            <img class="icon" src="./img/ico_ux.png" alt="logo UX">
+            <div class="right">
+                <h3 class="title">UX</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+            </div>
+        </article>
         
-        <!-- <ul class="listSkills">
-            <li class="skillHtml">
-                <img src="./img/ico_html5.png" alt="icon html" class="iconSkills">
-                <h2 class="subtitle">HTML</h2>
-                <div class="process"></div>
-            </li>
-        </ul> -->
     </section>
 </body>
 </html>
