create the compoment wrapper project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./components/skill-tec.css">
     <link rel="stylesheet" href="./components/wrapper-skill.css">
     <link rel="stylesheet" href="./components/progress-bar.css">
+    <link rel="stylesheet" href="./components/section-project.css">
 </head>
 <body>
     <header class="header">
@@ -47,7 +48,6 @@
     </section>  
     <section class="section">
         <h2 class="main-title -second">Skills</h2>
-
         <div class="wrapper-skill">
             <article class="skill-tec">
                 <img class="icon" src="./img/ico_html5.png" alt="logo HTML">
@@ -122,6 +122,14 @@
                 </div>
             </article>
         </div>  
+    </section>
+    <section class="section-project">
+        <h2 class="main-title -second">Projetos</h2>
+        <div class="wrapper-project">
+            <img class="icon-project" src="./assets/firedlabs.png" alt="logo firelabs">
+            <img class="icon-project" src="./assets/collabcode.png" alt="logo collabcode">
+            <img class="icon-project" src="./assets/portfolio.png" alt="logo portifolio">
+        </div>
     </section>
 </body>
 </html>
