centralized the component section project

--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
     <link rel="stylesheet" href="./components/main-title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
     <link rel="stylesheet" href="./components/box.css">
-    <link rel="stylesheet" href="./components/action.css">
+    <link rel="stylesheet" href="./components/action-header.css">
     <link rel="stylesheet" href="./components/section.css">
     <link rel="stylesheet" href="./components/skill-tec.css">
     <link rel="stylesheet" href="./components/wrapper-skill.css">
     <link rel="stylesheet" href="./components/progress-bar.css">
     <link rel="stylesheet" href="./components/section-project.css">
+    <link rel="stylesheet" href="./components/wrapper-project.css">
 </head>
 <body>
     <header class="header">
         <h2 class="subtitle">Monsor3sDev</h2>
         <nav> 
-            <a class="action"href="">Skills</a>
-            <a class="action"href="">Projetos</a>
-            <a class="action"href="">Sobre</a>
-            <a class="action"href="">Contatos</a>
+            <a class="action-header"href="">Skills</a>
+            <a class="action-header"href="">Projetos</a>
+            <a class="action-header"href="">Sobre</a>
+            <a class="action-header"href="">Contatos</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
