--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/header.css">
-    <link rel="stylesheet" href="./components/banner.css">
+    <link rel="stylesheet" href="./components/banner-section.css">
     <link rel="stylesheet" href="./components/button.css">
     <link rel="stylesheet" href="./components/main-title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
-    <link rel="stylesheet" href="./components/box.css">
+    <link rel="stylesheet" href="./components/box-section.css">
     <link rel="stylesheet" href="./components/action-header.css">
-    <link rel="stylesheet" href="./components/section.css">
+    <link rel="stylesheet" href="./components/section-skills.css">
     <link rel="stylesheet" href="./components/skill-tec.css">
     <link rel="stylesheet" href="./components/wrapper-skill.css">
     <link rel="stylesheet" href="./components/progress-bar.css">
@@ -35,19 +35,19 @@
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <section class="banner">
+    <section class="banner-section">
         <div class="wrapper">
-            <div class="box">
+            <div class="box-section">
                 <h1 class="main-title">Marlon Monsores</h1>
                 <h2 class="subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
-                <a class="button" href="" lang="en">Download CV</a>
-                <a class="button" href="">Contatos</a>
+                <a class="button -section" href="" lang="en">Download CV</a>
+                <a class="button -section" href="">Contatos</a>
             </div>
         </div>
     </section>  
-    <section class="section">
+    <section class="section-skills">
         <h2 class="main-title -second">Skills</h2>
         <div class="wrapper-skill">
             <article class="skill-tec">
