refactoring the section project

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./components/progress-bar.css">
     <link rel="stylesheet" href="./components/section-project.css">
     <link rel="stylesheet" href="./components/wrapper-project.css">
+    <link rel="stylesheet" href="./components/card-project.css">
 </head>
 <body>
     <header class="header">
@@ -127,9 +128,15 @@
     <section class="section-project">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-project">
-            <img class="icon-project" src="./assets/firedlabs.png" alt="logo firelabs">
-            <img class="icon-project" src="./assets/collabcode.png" alt="logo collabcode">
-            <img class="icon-project" src="./assets/portfolio.png" alt="logo portifolio">
+            <figure class="card-project">
+                <img class="logo" src="./img/logo-firedlabs.png" alt="logo firelabs">
+            </figure>
+            <figure class="card-project -blue">
+                <img class="logo" src="./img/logo-collabcode.png" alt="logo collabcode">
+            </figure>
+            <figure class="card-project">
+                <img class="logo" src="./img/portfolio.png" alt="logo portifolio">
+            </figure>
         </div>
     </section>
 </body>
