--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./components/wrapper-skill.css">
     <link rel="stylesheet" href="./components/progress-bar.css">
     <link rel="stylesheet" href="./components/section-project.css">
-    <link rel="stylesheet" href="./components/wrapper-project.css">
+    <link rel="stylesheet" href="./components/wrapper-card.css">
     <link rel="stylesheet" href="./components/card-project.css">
 </head>
 <body>
@@ -127,7 +127,7 @@
     </section>
     <section class="section-project">
         <h2 class="main-title -second">Projetos</h2>
-        <div class="wrapper-project">
+        <div class="wrapper-card">
             <figure class="card-project">
                 <img class="logo" src="./img/logo-firedlabs.png" alt="logo firelabs">
             </figure>
