add the links cards

--- a/index.html
+++ b/index.html
@@ -128,15 +128,21 @@
     <section class="section-project">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
-            <figure class="card-project">
-                <img class="logo" src="./img/logo-firedlabs.png" alt="logo firelabs">
-            </figure>
-            <figure class="card-project -blue">
-                <img class="logo" src="./img/logo-collabcode.png" alt="logo collabcode">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="./img/portfolio.png" alt="logo portifolio">
-            </figure>
+            <a href="https://firedlabs.com" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="./img/logo-firedlabs.png" alt="logo firelabs">
+                </figure>
+            </a>
+            <a href="https:collabcode.training" target="_blank">
+                <figure class="card-project -blue">
+                    <img class="logo" src="./img/logo-collabcode.png" alt="logo collabcode">
+                </figure>
+            </a>
+            <a href="https://monsor3s.github.io/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="./img/portfolio.png" alt="logo portifolio">
+                </figure>
+            </a>    
         </div>
     </section>
 </body>
