change banner-section to main-banner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/header.css">
-    <link rel="stylesheet" href="./components/banner-section.css">
+    <link rel="stylesheet" href="./components/main-banner.css">
     <link rel="stylesheet" href="./components/button.css">
     <link rel="stylesheet" href="./components/main-title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
@@ -36,7 +36,7 @@
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <section class="banner-section">
+    <section class="main-banner">
         <div class="wrapper">
             <div class="box-section">
                 <h1 class="main-title">Marlon Monsores</h1>
