change box-section to main-box

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./components/button.css">
     <link rel="stylesheet" href="./components/main-title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
-    <link rel="stylesheet" href="./components/box-section.css">
+    <link rel="stylesheet" href="./components/main-box.css">
     <link rel="stylesheet" href="./components/action-header.css">
     <link rel="stylesheet" href="./components/section-skills.css">
     <link rel="stylesheet" href="./components/skill-tec.css">
@@ -38,7 +38,7 @@
     </header>
     <section class="main-banner">
         <div class="wrapper">
-            <div class="box-section">
+            <div class="main-box">
                 <h1 class="main-title">Marlon Monsores</h1>
                 <h2 class="subtitle">FrontEnd Developer</h2>
             </div>
