change button to main-button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/header.css">
     <link rel="stylesheet" href="./components/main-banner.css">
-    <link rel="stylesheet" href="./components/button.css">
+    <link rel="stylesheet" href="./components/main-button.css">
     <link rel="stylesheet" href="./components/main-title.css">
     <link rel="stylesheet" href="./components/subtitle.css">
     <link rel="stylesheet" href="./components/main-box.css">
@@ -33,7 +33,7 @@
             <a class="action-header"href="">Projetos</a>
             <a class="action-header"href="">Sobre</a>
             <a class="action-header"href="">Contatos</a>
-            <a class="button" href="" lang="en">Download CV</a>
+            <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     <section class="main-banner">
@@ -43,8 +43,8 @@
                 <h2 class="subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
-                <a class="button -section" href="" lang="en">Download CV</a>
-                <a class="button -section" href="">Contatos</a>
+                <a class="main-button -section" href="" lang="en">Download CV</a>
+                <a class="main-button -section" href="">Contatos</a>
             </div>
         </div>
     </section>  
