change subtitle to main-subtitle

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">  
 
     <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./components/header.css">
+    <link rel="stylesheet" href="./components/main-header.css">
     <link rel="stylesheet" href="./components/main-banner.css">
     <link rel="stylesheet" href="./components/main-button.css">
     <link rel="stylesheet" href="./components/main-title.css">
-    <link rel="stylesheet" href="./components/subtitle.css">
+    <link rel="stylesheet" href="./components/main-subtitle.css">
     <link rel="stylesheet" href="./components/main-box.css">
     <link rel="stylesheet" href="./components/action-header.css">
     <link rel="stylesheet" href="./components/section-skills.css">
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="./components/card-project.css">
 </head>
 <body>
-    <header class="header">
-        <h2 class="subtitle">Monsor3sDev</h2>
+    <header class="main-header">
+        <h2 class="main-subtitle">Monsor3sDev</h2>
         <nav> 
             <a class="action-header"href="">Skills</a>
             <a class="action-header"href="">Projetos</a>
@@ -40,7 +40,7 @@
         <div class="wrapper">
             <div class="main-box">
                 <h1 class="main-title">Marlon Monsores</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2>
+                <h2 class="main-subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
                 <a class="main-button -section" href="" lang="en">Download CV</a>
