change section-skill to main-section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <link rel="stylesheet" href="./components/main-subtitle.css">
     <link rel="stylesheet" href="./components/main-box.css">
     <link rel="stylesheet" href="./components/action-header.css">
-    <link rel="stylesheet" href="./components/section-skills.css">
+    <link rel="stylesheet" href="./components/main-section.css">
     <link rel="stylesheet" href="./components/skill-tec.css">
     <link rel="stylesheet" href="./components/wrapper-skill.css">
     <link rel="stylesheet" href="./components/progress-bar.css">
-    <link rel="stylesheet" href="./components/section-project.css">
     <link rel="stylesheet" href="./components/wrapper-card.css">
     <link rel="stylesheet" href="./components/card-project.css">
 </head>
@@ -48,7 +47,7 @@
             </div>
         </div>
     </section>  
-    <section class="section-skills">
+    <section class="main-section">
         <h2 class="main-title -second">Skills</h2>
         <div class="wrapper-skill">
             <article class="skill-tec">
@@ -125,7 +124,7 @@
             </article>
         </div>  
     </section>
-    <section class="section-project">
+    <section class="main-section -project">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
             <a href="https://firedlabs.com" target="_blank">
