--- a/index.html
+++ b/index.html
@@ -144,5 +144,9 @@
             </a>    
         </div>
     </section>
+    <section class="main-section -about">
+        <h2 class="main-title -second">Sobre</h2>
+        <p class="about-text">Hoje, instrutor e desenvolvedor FrontEnd/UX pela CollabCode, Marco já trabalhou nas mais diversas áreas. Foi palhaço, entrou na área de TI como desenvolvedor HMI/PLC e gosta de ir descobrindo seu caminho conforme o percorre. Marco também tem uma crescente presença em comunidades de UX e Front-end, trabalhando para uní-las, palestra em empresas e eventos como o WebBR, escreve em diversos blogs como o da Caelum, o Pinceladas da Web e seu Medium, quando não está jogando Airsoft ou trocando ideias com amigos.</p>
+    </section>
 </body>
 </html>
