--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </section>
     <section class="main-section -about">
         <h2 class="main-title -second">Sobre</h2>
-        <p class="about-text">Hoje, instrutor e desenvolvedor FrontEnd/UX pela CollabCode, Marco já trabalhou nas mais diversas áreas. Foi palhaço, entrou na área de TI como desenvolvedor HMI/PLC e gosta de ir descobrindo seu caminho conforme o percorre. Marco também tem uma crescente presença em comunidades de UX e Front-end, trabalhando para uní-las, palestra em empresas e eventos como o WebBR, escreve em diversos blogs como o da Caelum, o Pinceladas da Web e seu Medium, quando não está jogando Airsoft ou trocando ideias com amigos.</p>
+        <p class="about-text">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."</p>
     </section>
 </body>
 </html>
