create component main-description

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./components/progress-bar.css">
     <link rel="stylesheet" href="./components/wrapper-card.css">
     <link rel="stylesheet" href="./components/card-project.css">
+    <link rel="stylesheet" href="./components/main-description.css">
 </head>
 <body>
     <header class="main-header">
@@ -146,7 +147,7 @@
     </section>
     <section class="main-section -about">
         <h2 class="main-title -second">Sobre</h2>
-        <p class="about-text">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."</p>
+        <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."</p>
     </section>
 </body>
 </html>
