--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./components/wrapper-card.css">
     <link rel="stylesheet" href="./components/card-project.css">
     <link rel="stylesheet" href="./components/main-description.css">
+    <link rel="stylesheet" href="./components/button-arrow.css">
 </head>
 <body>
     <header class="main-header">
@@ -147,7 +148,12 @@
     </section>
     <section class="main-section -about">
         <h2 class="main-title -second">Sobre</h2>
-        <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."</p>
+
+        <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."
+        </p>
+
+        <button class="button-arrow -left"><span class="content">Avançar</span></button>
+        <button class="button-arrow -right"><span class="content">Voltar</span></button>
     </section>
 </body>
 </html>
