create component node card

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="./components/card-project.css">
     <link rel="stylesheet" href="./components/main-description.css">
     <link rel="stylesheet" href="./components/button-arrow.css">
+    <link rel="stylesheet" href="./components/node-card.css">
+    
 </head>
 <body>
     <header class="main-header">
@@ -153,6 +155,12 @@
         </p>
 
         <button class="button-arrow -left"><span class="content">Avançar</span></button>
+        <figure class="node-card">
+            <figcaption class="title">2012</figcaption>
+            <div class="logo">
+                <img src="img/logo-locaweb.png" alt="Logo da Locaweb" >
+            </div>
+        </figure>
         <button class="button-arrow -right"><span class="content">Voltar</span></button>
     </section>
 </body>
