--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./components/wrapper-card.css">
     <link rel="stylesheet" href="./components/card-project.css">
     <link rel="stylesheet" href="./components/main-description.css">
+    <link rel="stylesheet" href="./components/main-carousel.css">
     <link rel="stylesheet" href="./components/button-arrow.css">
     <link rel="stylesheet" href="./components/node-card.css">
     
@@ -154,14 +155,47 @@
         <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."
         </p>
 
-        <button class="button-arrow -left"><span class="content">Avançar</span></button>
-        <figure class="node-card">
-            <figcaption class="title">2012</figcaption>
-            <div class="logo">
-                <img src="img/logo-locaweb.png" alt="Logo da Locaweb" >
-            </div>
-        </figure>
-        <button class="button-arrow -right"><span class="content">Voltar</span></button>
+        <section class="main-carousel">
+            <button class="button-arrow -left"><span class="content">Avançar</span></button>
+            
+            <figure class="node-card">
+                <figcaption class="title">2012</figcaption>
+                <div class="logo">
+                    <img src="img/logo-locaweb.png" alt="Logo da Locaweb" >
+                </div>
+            </figure>
+            <figure class="node-card -clean">
+                <figcaption class="title">2014</figcaption>
+                <div class="logo">
+                    <img src="img/logo-caelum.png" alt="Logo da Caelum" >
+                </div>
+            </figure>
+            <figure class="node-card -first">
+                <figcaption class="title">2016</figcaption>
+                <div class="logo">
+                    <img src="img/logo-getninjas.png" alt="Logo da GetNinjas" >
+                </div>
+            </figure>
+            <figure class="node-card -clean">
+                <figcaption class="title">2017</figcaption>
+                <div class="logo">
+                    <img src="img/logo-caelum.png" alt="Logo da Caelum" >
+                </div>
+            </figure>
+            <figure class="node-card">
+                <figcaption class="title">2018</figcaption>
+                <div class="logo">
+                    <img src="img/logo-impulso.png" alt="Logo da Impulso" >
+                </div>
+            </figure>
+            <figure class="node-card -first">
+                <figcaption class="title">2019</figcaption>
+                <div class="logo">
+                    <img src="img/logo-collabcode(1).png" alt="Logo da Collabcode" >
+                </div>
+            </figure>
+            <button class="button-arrow -right"><span class="content">Voltar</span></button>
+        </section>
     </section>
 </body>
 </html>
