--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <link rel="stylesheet" href="./components/main-carousel.css">
     <link rel="stylesheet" href="./components/button-arrow.css">
     <link rel="stylesheet" href="./components/node-card.css">
+    <link rel="stylesheet" href="./components/form-contact.css">
+    <link rel="stylesheet" href="./components/field-text.css">
+    <link rel="stylesheet" href="./components/name-form.css">
+    <link rel="stylesheet" href="./components/input-text.css">
     
 </head>
 <body>
@@ -199,8 +203,25 @@
         </section>
         <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."
         </p>
+        <script src="js/components/main-carousel.js"></script>
     </section>
+    <section class="main-section -contact">
+        <h2 class="main-title -second">Contatos</h2>
 
-    <script src="js/components/main-carousel.js"></script>
+        <div class="form-contact">
+            <div class="field-text">
+                <p class="name-form">Nome</p>
+                <input type="text" class="input-text">
+            </div>
+            <div class="field-text">
+                <p class="name-form">Email</p>
+                <input type="text" class="input-text">
+            </div>
+            <div class="field-text">
+                <p class="name-form">Mensagem</p>
+                <input type="text" class="input-text">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
