create components footer

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="./components/field-text.css">
     <link rel="stylesheet" href="./components/name-form.css">
     <link rel="stylesheet" href="./components/input-text.css">
+    <link rel="stylesheet" href="./components/footer.css">
     
 </head>
 <body>
@@ -219,9 +220,16 @@
             </div>
             <div class="field-text">
                 <p class="name-form">Mensagem</p>
-                <input type="text" class="input-text">
+                <textarea name="mensagem" class="field-textarea" cols="191" rows="10"></textarea>
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="social-media">
+            <img src="img/twitter1.png" alt="logo twitter">
+            <img src="img/youtube1.png" alt="logo youtube">
+            <img src="img/discord1.png" alt="logo discord">
+        </div>
+    </footer>
 </body>
 </html>
