settings the component footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="./components/field-text.css">
     <link rel="stylesheet" href="./components/name-form.css">
     <link rel="stylesheet" href="./components/input-text.css">
-    <link rel="stylesheet" href="./components/footer.css">
+    <link rel="stylesheet" href="./components/main-footer.css">
     
 </head>
 <body>
@@ -204,7 +204,6 @@
         </section>
         <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."
         </p>
-        <script src="js/components/main-carousel.js"></script>
     </section>
     <section class="main-section -contact">
         <h2 class="main-title -second">Contatos</h2>
@@ -222,14 +221,21 @@
                 <p class="name-form">Mensagem</p>
                 <textarea name="mensagem" class="field-textarea" cols="191" rows="10"></textarea>
             </div>
+            <button class="main-button -contact">Enviar</button>
         </div>
     </section>
-    <footer class="footer">
-        <div class="social-media">
-            <img src="img/twitter1.png" alt="logo twitter">
-            <img src="img/youtube1.png" alt="logo youtube">
-            <img src="img/discord1.png" alt="logo discord">
-        </div>
+    <footer class="main-footer">
+            <a class="action" href="" target="_blank">
+                <img src="img/twitter1.png" alt="logo twitter">
+            </a>
+            <a class="action" href="" target="_blank">
+                <img src="img/youtube1.png" alt="logo youtube">
+            </a>
+            <a class="action" href="" target="_blank">
+                <img src="img/discord1.png" alt="logo discord">
+            </a>
     </footer>
+
+    <script src="js/components/main-carousel.js"></script>
 </body>
 </html>
