--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="./components/name-form.css">
     <link rel="stylesheet" href="./components/main-label.css">
     <link rel="stylesheet" href="./components/main-footer.css">
+    <link rel="stylesheet" href="./components/main-input.css">
     
 </head>
 <body>
@@ -210,17 +211,17 @@
 
         <form class="form-contact">
             <div class="wrap-form">
-                <div class="field-text">
+                <div class="">
                     <label class="main-label" for="name">Nome</label>
-                    <input type="text" id="name">
+                    <input class="main-input" type="text" id="name">
                 </div>
-                <div class="field-text">
+                <div class="">
                     <label class="main-label" for="email">Email</label>
-                    <input type="email" id="email">
+                    <input class="main-input" type="email" id="email">
                 </div>
-                <div class="field-text">
+                <div class="">
                     <label class="main-label" for="message">Mensagem</label>
-                    <textarea id="message" ></textarea>
+                    <textarea class="main-input" id="message" ></textarea>
                 </div>
                 <button type="submit" class="main-button -contact">Enviar</button>
             </div>
