creata variation main-input -textarea

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="">
                     <label class="main-label" for="message">Mensagem</label>
-                    <textarea class="main-input" id="message" ></textarea>
+                    <textarea class="main-input -textarea" id="message" ></textarea>
                 </div>
                 <button type="submit" class="main-button -contact">Enviar</button>
             </div>
