add 1100 breakpoint to main-header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <header class="main-header">
         <h2 class="main-subtitle">Monsor3sDev</h2>
-        <nav> 
+        <nav class="menu"> 
             <a class="action-header"href="">Skills</a>
             <a class="action-header"href="">Projetos</a>
             <a class="action-header"href="">Sobre</a>
