create the icon-menu component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/main-header.css">
+    <link rel="stylesheet" href="./components/icon-menu.css">
     <link rel="stylesheet" href="./components/main-banner.css">
     <link rel="stylesheet" href="./components/main-button.css">
     <link rel="stylesheet" href="./components/main-title.css">
@@ -38,7 +39,10 @@
 <body>
     <header class="main-header">
         <h2 class="main-subtitle">Monsor3sDev</h2>
-        <nav class="menu"> 
+
+        <a href="#menu" class="icon-menu">Abri Menu</a>
+
+        <nav id="menu" class="menu"> 
             <a class="action-header"href="">Skills</a>
             <a class="action-header"href="">Projetos</a>
             <a class="action-header"href="">Sobre</a>
