create the icon-close component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./components/main-header.css">
     <link rel="stylesheet" href="./components/icon-menu.css">
+    <link rel="stylesheet" href="./components/icon-close.css">
     <link rel="stylesheet" href="./components/main-banner.css">
     <link rel="stylesheet" href="./components/main-button.css">
     <link rel="stylesheet" href="./components/main-title.css">
@@ -48,6 +49,8 @@
             <a class="action-header"href="">Sobre</a>
             <a class="action-header"href="">Contatos</a>
             <a class="main-button" href="" lang="en">Download CV</a>
+
+            <a href="#" class="icon-close">X</a>
         </nav>
     </header>
     <section class="main-banner">
